--- a/readWiki/database_proxy.ipynb
+++ b/readWiki/database_proxy.ipynb
@@ -9,10 +9,6 @@
     "import pandas as pd\n",
     "import sqlite3\n",
     "import time\n",
-    "\n",
-    "conn = sqlite3.connect(\"Database/wiki_database2.db\")\n",
-    "\n",
-    "\n",
     "'''\n",
     "Tables organization: \n",
     "Entities_[letter or not_alpha]\n",
@@ -32,132 +28,165 @@
     "Properties Table\n",
     "property_id Unique primary key  \n",
     "label:Description of the Property \n",
-    "\n",
-    "\n",
     "'''\n",
     "\n",
-    "def exit_precedure():\n",
-    "    conn.close()\n",
-    "    exit(-1)\n",
+    "\n",
+    "class WikiDatabase:\n",
+    "    conn = None\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        try:\n",
+    "            self.conn = sqlite3.connect('wiki_database2.db')\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            exit(-1)\n",
+    "\n",
+    "    def exit_procedure(self):\n",
+    "        self.conn.close()\n",
+    "        exit(-1)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def get_table_name(entity_label):\n",
+    "        \"\"\"\n",
+    "        @:param self:\n",
+    "        @:param label of the entity for which you need to\n",
+    "        :rtype: string\n",
+    "        @:return name of the table where entity is stored\n",
+    "        \"\"\"\n",
+    "        if entity_label[0].isalpha():\n",
+    "            return entity_label[[0]].lower()\n",
+    "        else:\n",
+    "            return 'not_alpha'\n",
+    "\n",
+    "    # TODO: Test the return value\n",
+    "    # TODO: change to check in the entities table\n",
+    "    def get_similar_entities_id(self, label):\n",
+    "        \"\"\"\n",
+    "        Returns a list of entities id where the label matches the entity_label name\n",
+    "        :param self:\n",
+    "        :type self:\n",
+    "        :param label:\n",
+    "        :type label:\n",
+    "        :return: list of all the entities id and label where the label matched\n",
+    "        :rtype: Array containing all similar entities\n",
+    "        \"\"\"\n",
+    "        entities_id = None\n",
+    "        try:\n",
+    "            entities_id = pd.read_sql_query(\n",
+    "                \"SELECT * FROM Entities WHERE label  LIKE \\\"%{}%\\\";\".format(label),\n",
+    "                self.conn)\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            self.exit_procedure()\n",
+    "        return entities_id.tolist()\n",
+    "\n",
+    "    def get_specific_entity(self, label):\n",
+    "        \"\"\"\n",
+    "        Search for the id, label and description of an specific identity\n",
+    "        :param label: string of the label to look for\n",
+    "        :type label: string\n",
+    "        :return: id, label and description of the label\n",
+    "        :rtype: pandas.core.series.Series\n",
+    "        \"\"\"\n",
+    "        entity_id = None\n",
+    "        table_name = self.get_table_name(label)\n",
+    "        try:\n",
+    "            entity_id = pd.read_sql_query(\n",
+    "                \"SELECT * FROM Entities_{} WHERE label = \\\"{}\\\";\".format(table_name, label),\n",
+    "                self.conn)\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            self.exit_procedure()\n",
+    "        return entity_id.iloc[0]\n",
+    "\n",
+    "    def get_entity_properties(self, entity_id):\n",
+    "        \"\"\"\n",
+    "        Search for all properties of the entity\n",
+    "        Return all the\n",
+    "        :param entity_id: id of a entity\n",
+    "        :type entity_id: str\n",
+    "        :return: id's of the properties and related entities\n",
+    "        :rtype:\n",
+    "        \"\"\"\n",
+    "        entity_properties = None\n",
+    "        try:\n",
+    "            entity_properties = pd.read_sql_query(\n",
+    "                \"SELECT property_id, related_entity_id FROM Properties_relations WHERE entity_id = \\\"{}\\\";\".format(entity_id),\n",
+    "                self.conn)\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            self.exit_procedure()\n",
+    "        return entity_properties\n",
+    "\n",
+    "    def get_entity_info(self, entity_id):\n",
+    "\n",
+    "        relation_label = None\n",
+    "        try:\n",
+    "            relation_label = pd.read_sql_query(\n",
+    "                \"SELECT label, description FROM Entities WHERE entity_id = \\\"{}\\\"\".format(entity_id),\n",
+    "                self.conn)\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            self.exit_procedure()\n",
+    "        if relation_label.empty:\n",
+    "            return None\n",
+    "        return relation_label.iloc[0][\"label\"]\n",
+    "\n",
+    "    def get_property_label(self, property_id):\n",
+    "        \"\"\"\n",
+    "        :param property_id: id of the property to look for\n",
+    "        :type property_id:\n",
+    "        :return: label of the given id, None if the id does not exist\n",
+    "        :rtype:\n",
+    "        \"\"\"\n",
+    "        entity_label = None\n",
+    "        try:\n",
+    "            entity_label = pd.read_sql_query(\n",
+    "                \"SELECT label FROM Properties WHERE property_id = \\\"{}\\\"\".format(property_id),\n",
+    "                self.conn)\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            self.exit_procedure()\n",
+    "        if entity_label.empty:\n",
+    "            return None\n",
+    "        return entity_label.iloc[0][\"label\"]\n",
+    "\n",
+    "    def get_relation_string(self, entity_label, property_id, related_entity_id):\n",
+    "        \"\"\"\n",
+    "        :param entity_label: if\n",
+    "        :type entity_label: string\n",
+    "        :param property_id:\n",
+    "        :type property_id: string\n",
+    "        :param related_entity_id:\n",
+    "        :type related_entity_id: string\n",
+    "        :return:\n",
+    "        :rtype:\n",
+    "        \"\"\"\n",
+    "        entity_label = None\n",
+    "        related_entity_label = None\n",
+    "        property_name = None\n",
+    "        try:\n",
+    "            # entity_label = get_entity_label(entity_id)\n",
+    "            related_entity_label = self.get_entity_label(related_entity_id)\n",
+    "            property_name = self.get_property_label(property_id)\n",
+    "        except Exception as e:\n",
+    "            print(e)\n",
+    "            self.exit_precedure()\n",
+    "        if entity_label is None or  related_entity_label is None or property_name is None:\n",
+    "            return None\n",
+    "        return \"{} {} {}\".format(entity_label, property_name, related_entity_label)\n",
+    "\n",
+    "    # def __del__(self):\n",
+    "    #     self.conn.close()\n",
     "\n",
     "\n",
-    "def get_table_name(entity_label):\n",
-    "    if entity_label[0].isalpha():\n",
-    "        return entity_label[0]\n",
-    "    else:\n",
-    "        return 'not_alpha'\n",
-    "\n",
-    "\n",
-    "def get_similar_entities_id(entity_label):\n",
-    "    entities_id = None\n",
-    "    table_name = get_table_name(entity_label)\n",
-    "    try:\n",
-    "        entities_id = pd.read_sql_query(\n",
-    "            \"SELECT entity_id FROM Entities_{} WHERE label  LIKE \\\"%{}%\\\";\".format(table_name, entity_label),\n",
-    "            conn)\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        exit_precedure()\n",
-    "    return entities_id\n",
-    "\n",
-    "\n",
-    "def get_specific_entity_id(entity_label):\n",
-    "    entity_id = None\n",
-    "    table_name = get_table_name(entity_label)\n",
-    "    try:\n",
-    "        entity_id = pd.read_sql_query(\n",
-    "            \"SELECT entity_id FROM Entities_{} WHERE label = \\\"{}\\\";\".format(table_name, entity_label),\n",
-    "            conn)\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        exit_precedure()\n",
-    "    return entity_id\n",
-    "\n",
-    "\n",
-    "def get_entity_properties(entity_label):\n",
-    "    entity_properties = None\n",
-    "    try:\n",
-    "        entity_properties = pd.read_sql_query(\n",
-    "            \"SELECT * FROM Properties_relations WHERE entity_id = \\\"{}\\\";\".format(entity_label),\n",
-    "            conn)\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        exit_precedure()\n",
-    "    return entity_properties\n",
-    "\n",
-    "\n",
-    "def get_entity_label(entity_id):\n",
-    "    relation_label = None\n",
-    "    try:\n",
-    "        relation_label = pd.read_sql_query(\n",
-    "            \"SELECT label FROM Entities WHERE entity_id = \\\"{}\\\"\".format(entity_id),\n",
-    "            conn)\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        exit_precedure()\n",
-    "    if relation_label.empty:\n",
-    "        return None\n",
-    "    return relation_label.iloc[0][\"label\"]\n",
-    "\n",
-    "\n",
-    "def get_property_label(property_id):\n",
-    "    entity_label = None\n",
-    "    try:\n",
-    "        entity_label = pd.read_sql_query(\n",
-    "            \"SELECT label FROM Properties WHERE property_id = \\\"{}\\\"\".format(property_id),\n",
-    "            conn)\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        exit_precedure()\n",
-    "    if entity_label.empty:\n",
-    "        return None\n",
-    "    return entity_label.iloc[0][\"label\"]\n",
-    "\n",
-    "\n",
-    "def get_relation_string(entity_id, property_id, related_entity_id):\n",
-    "    # assert(isinstance(relation, str) and len(relation) == 3)\n",
-    "    # relation_entity = relation\n",
-    "    entity_label = None\n",
-    "    related_entity_label = None\n",
-    "    property_name = None\n",
-    "    try:\n",
-    "        entity_label = get_entity_label(entity_id)\n",
-    "        related_entity_label = get_entity_label(related_entity_id)\n",
-    "        property_name = get_property_label(property_id)\n",
-    "    except Exception as e:\n",
-    "        print(e)\n",
-    "        exit_precedure()\n",
-    "    if entity_label is None or  related_entity_label is None or property_name is None:\n",
-    "        return None\n",
-    "    return entity_label + property_name + related_entity_label\n",
-    "\n",
-    "\n",
-    "# user_input = ''\n",
-    "\n",
-    "# while len(user_input) == 0:\n",
-    "#      user_input= input(\"Please enter a entity's id: \")\n",
-    "#      property_id = input(\"Please enter property id: \")\n",
-    "#      related_entity_id = input(\"Please enter related entity's id: \")\n",
-    "\n",
-    "\n",
+    "# wiki = WikiDatabase()\n",
     "# start_time = time.time()\n",
-    "# print(get_relation_string(user_input, property_id, related_entity_id))\n",
-    "# print(\"Relationship string took {} seconds\".format(time.time() - start_time))\n",
-    "# # exit()\n",
-    "# # e_id = get_specific_entity_id(user_input).iloc[0][\"entity_id\"]\n",
-    "# # print(\"Select query on table Entities_{} took: {}\".format(user_input[0], time.time() - start_time))\n",
-    "# # print(e_id)\n",
-    "# # # print(type(e_id))\n",
-    "# # # print(e_id.iloc[0][\"entity_id\"])\n",
-    "# # start_time = time.time()\n",
-    "# # e_properties = get_entity_properties(e_id)\n",
-    "# # print(\"Select query on table Properties_relations took: {}\".format(time.time() - start_time))\n",
-    "# # print(e_properties)\n",
-    "\n",
-    "# conn.close()\n",
-    "\n",
-    "\n",
-    "\n"
+    "# result = wiki.get_specific_entity('Cristiano Ronaldo')\n",
+    "# print('Query tool : {}'.format(time.time()- start_time))\n",
+    "# print(type(result))\n",
+    "# print(result)\n",
+    "# wiki.exit_procedure()\n"
    ]
   }
  ],
