Formatting Database Proxy

--- a/01_dataset_builder.ipynb
+++ b/01_dataset_builder.ipynb
@@ -49,6 +49,7 @@
     "    def __init__(self):\n",
     "        self.rake = Rake()\n",
     "        self.kba = KnowledgeBaseAccessor()\n",
+    "        self.database = \n",
     "        pass\n",
     "    \n",
     "    def build(self, ds):\n",
