--- a/00_database_proxy.ipynb
+++ b/00_database_proxy.ipynb
@@ -2,15 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# default_exp database_proxy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import sqlite3\n",
-    "import time\n",
-    "'''\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Database Proxy\n",
+    "\n",
+    "Handles Database connection and queries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Tables organization: \n",
+    "\n",
     "Entities_[letter or not_alpha]\n",
     "entity_id: Primary key, Unique \n",
     "label: name of the entity\n",
@@ -27,10 +51,15 @@
     "\n",
     "Properties Table\n",
     "property_id Unique primary key  \n",
-    "label:Description of the Property \n",
-    "'''\n",
-    "\n",
-    "\n",
+    "label:Description of the Property "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class WikiDatabase:\n",
     "    conn = None\n",
     "\n",
@@ -177,9 +206,15 @@
     "        return \"{} {} {}\".format(entity_label, property_name, related_entity_label)\n",
     "\n",
     "    # def __del__(self):\n",
-    "    #     self.conn.close()\n",
-    "\n",
-    "\n",
+    "    #     self.conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# wiki = WikiDatabase()\n",
     "# start_time = time.time()\n",
     "# result = wiki.get_specific_entity('Cristiano Ronaldo')\n",
@@ -206,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
