--- a/00_database_proxy.ipynb
+++ b/00_database_proxy.ipynb
@@ -210,6 +210,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
