--- a/10_insert_to_database.ipynb
+++ b/10_insert_to_database.ipynb
@@ -6,8 +6,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#default_exp insert_to_database"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Insert To Database\n",
+    "\n",
+    "> Connects to database and inserts `sql_statements.txt'\n",
+    "\n",
+    "Run this after `create_database_tables`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
     "from qwikidata.json_dump import WikidataJsonDump\n",
-    "import sqlite3\n",
+    "import sqlite3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
     "connection = sqlite3.connect(\"wiki_database2.db\") # Name of your database\n",
     "sql_query = []\n",
     "last_line = ''\n",
