--- a/12_properties.ipynb
+++ b/12_properties.ipynb
@@ -3,12 +3,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "corrected-rough",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import sqlite3\n",
-    "property_dict = temp ={\n",
+    "# default_exp properties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "manual-attraction",
+   "metadata": {},
+   "source": [
+    "# Properties\n",
+    "\n",
+    "> A dictionary of properties for the database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "hundred-complement",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def properties():\n",
+    "    return {\n",
     "    \"P6\": \"head of government\",\n",
     "    \"P10\": \"video\",\n",
     "    \"P15\": \"route map\",\n",
@@ -8483,195 +8504,35 @@
     "    \"P7790\": \"word in DLE dictionary of Spanish\",\n",
     "    \"P7793\": \"filename in archive\",\n",
     "    \"P7792\": \"PubAg ID\"\n",
-    "}\n",
-    "'''\n",
-    "Tables organization: \n",
-    "Entities_[letter or not_alpha]\n",
-    "entity_id: Primary key, Unique \n",
-    "label: name of the entity\n",
-    "description: Short description \n",
-    "\n",
-    "Properties_relations Table\n",
-    "entity_id: relationship of  \n",
-    "relations: List of all relations\n",
-    "\n",
-    "Aliases Table\n",
-    "entity_id \n",
-    "alias: Other labels. \n",
-    "\n",
-    "Properties Table\n",
-    "property_id Unique primary key  \n",
-    "label:Description of the Property \n",
-    "'''\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "class WikiDatabase:\n",
-    "    conn = None\n",
-    "\n",
-    "    def __init__(self):\n",
-    "        try:\n",
-    "            self.conn = sqlite3.connect('wiki_data.db')\n",
-    "        except Exception as e:\n",
-    "            print(e)\n",
-    "            exit(-1)\n",
-    "\n",
-    "    def exit_procedure(self):\n",
-    "        self.conn.close()\n",
-    "        exit(-1)\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def get_table_name(entity_label):\n",
-    "        \"\"\"\n",
-    "        @:param self:\n",
-    "        @:param label of the entity for which you need to\n",
-    "        :rtype: string\n",
-    "        @:return name of the table where entity is stored\n",
-    "        \"\"\"\n",
-    "        if entity_label[0].isalpha():\n",
-    "            return entity_label[0].lower()\n",
-    "        else:\n",
-    "            return 'not_alpha'\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def clean_relations(relations_string):\n",
-    "        \"\"\"\n",
-    "        :param relations_string: List of all the relations returned by database\n",
-    "        :type relations_string: string\n",
-    "        :return: list of all relations\n",
-    "        :rtype: List\n",
-    "        \"\"\"\n",
-    "        relations = []\n",
-    "        relation_row = []\n",
-    "        for idx, relation in enumerate(relations_string.split(',')):\n",
-    "            if idx & 1 == 1:\n",
-    "                relation_row.append(relation[1:-1])\n",
-    "            else:\n",
-    "                relation_row.append(relation[1:])\n",
-    "            if len(relation_row) == 2:\n",
-    "                relations.append(relation_row + [])\n",
-    "                print(relation_row)\n",
-    "                relation_row.clear()\n",
-    "        print(relations)\n",
-    "        return relations\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def get_property_label(relations_id):\n",
-    "        \"\"\"\n",
-    "            :param property_id: id of the property to look for\n",
-    "            :type property_id:\n",
-    "            :return: label of the given id, None if the id does not exist\n",
-    "            :rtype:\n",
-    "        \"\"\"\n",
-    "        return property_dict[relations_id]\n",
-    "\n",
-    "    # TODO: Test the return value\n",
-    "    # TODO: change to check in the entities table\n",
-    "    def get_similar_entities_label(self, label):\n",
-    "        \"\"\"\n",
-    "        Returns a list of entities id where the label matches the entity_label name\n",
-    "        :param self:\n",
-    "        :type self:\n",
-    "        :param label:\n",
-    "        :type label:\n",
-    "        :return: list of all the entities id and label where the label matched\n",
-    "        :rtype: Array containing all similar entities\n",
-    "        \"\"\"\n",
-    "        entities_id = None\n",
-    "        try:\n",
-    "            entities_id = pd.read_sql_query(\n",
-    "                \"SELECT * FROM Entities WHERE label  LIKE \\\"%{}%\\\";\".format(label),\n",
-    "                self.conn)\n",
-    "        except Exception as e:\n",
-    "            print(e)\n",
-    "            self.exit_procedure()\n",
-    "        return entities_id.values.tolist()\n",
-    "\n",
-    "    def get_entity_by_label(self, label):\n",
-    "        \"\"\"\n",
-    "        Search for the id, label and description of an specific identity\n",
-    "        :param label: string of the label to look for\n",
-    "        :type label: string\n",
-    "        :return: id, label and description of the label\n",
-    "        :rtype: pandas.core.series.Series\n",
-    "        \"\"\"\n",
-    "        entity_id = None\n",
-    "        table_name = self.get_table_name(label)\n",
-    "        try:\n",
-    "            entity_id = pd.read_sql_query(\n",
-    "                \"SELECT * FROM Entities_{} WHERE label = \\\"{}\\\";\".format(table_name, label),\n",
-    "                self.conn)\n",
-    "        except Exception as e:\n",
-    "            print(e)\n",
-    "            self.exit_procedure()\n",
-    "        return entity_id.iloc[[0]]\n",
-    "\n",
-    "    def get_entity_properties(self, entity_id):\n",
-    "        \"\"\"\n",
-    "        Search for all properties of the entity\n",
-    "        Return all the\n",
-    "        :param entity_id: id of a entity\n",
-    "        :type entity_id: str\n",
-    "        :return: data frame with a string of the relations\n",
-    "        :rtype: pandas.core.series.Series\n",
-    "        \"\"\"\n",
-    "        entity_properties = None\n",
-    "        try:\n",
-    "            entity_properties = pd.read_sql_query(\n",
-    "                \"SELECT * FROM Properties_relations WHERE entity_id = \\\"{}\\\";\".format(entity_id),\n",
-    "                self.conn)\n",
-    "        except Exception as e:\n",
-    "            print(e)\n",
-    "            self.exit_procedure()\n",
-    "        return self.clean_relations(entity_properties['relations'].values[0])\n",
-    "\n",
-    "    def get_entity_by_id(self, entity_id):\n",
-    "\n",
-    "        relation_label = None\n",
-    "        try:\n",
-    "            relation_label = pd.read_sql_query(\n",
-    "                \"SELECT label, description FROM Entities WHERE entity_id = \\\"{}\\\"\".format(entity_id),\n",
-    "                self.conn)\n",
-    "        except Exception as e:\n",
-    "            print(e)\n",
-    "            self.exit_procedure()\n",
-    "        if relation_label.empty:\n",
-    "            return None\n",
-    "        return relation_label.iloc[0][\"label\"]\n",
-    "\n",
-    "    def get_relation_string(self, property_id, related_entity_id):\n",
-    "        \"\"\"\n",
-    "        :param property_id:\n",
-    "        :type property_id: string\n",
-    "        :param related_entity_id:\n",
-    "        :type related_entity_id: string\n",
-    "        :return:\n",
-    "        :rtype: string describing the relationship\n",
-    "        \"\"\"\n",
-    "        entity_label = None\n",
-    "        related_entity_label = None\n",
-    "        property_name = None\n",
-    "        try:\n",
-    "            # entity_label = get_entity_label(entity_id)\n",
-    "            related_entity_label = self.get_entity_by_id(related_entity_id)\n",
-    "            property_name = get_property_label(property_id).iloc[0]\n",
-    "        except Exception as e:\n",
-    "            print(e)\n",
-    "            self.exit_procedure()\n",
-    "        if entity_label is None or related_entity_label is None or property_name is None:\n",
-    "            return None\n",
-    "        return \"{}: {}\".format(property_name, related_entity_label)\n",
-    "\n",
-    "# wiki = WikiDatabase()\n",
-    "# start_time = time.time()\n",
-    "# result = wiki.get_specific_entity('Cristiano Ronaldo')\n",
-    "# print('Query tool : {}'.format(time.time()- start_time))\n",
-    "# print(type(result))\n",
-    "# print(result)\n",
-    "# wiki.exit_procedure()\n"
+    "}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "direct-generator",
+   "metadata": {},
+   "source": [
+    "# Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "failing-invalid",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = properties()\n",
+    "assert isinstance(p, dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "verbal-trick",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -8682,5 +8543,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
