--- a/01_dataset_builder.ipynb
+++ b/01_dataset_builder.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "#export \n",
     "from rake_nltk import Rake\n",
-    "from kirby.knowledge_base_accessor import KnowledgeBaseAccessor\n",
+    "from kirby.database_proxy import WikiDatabase\n",
     "import json"
    ]
   },
@@ -33,23 +33,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (<ipython-input-8-0a8252ac7c6a>, line 28)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-0a8252ac7c6a>\"\u001b[0;36m, line \u001b[0;32m28\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#export\n",
     "class DatasetBuilder():\n",
     "    def __init__(self):\n",
     "        self.rake = Rake()\n",
-    "        self.kba = KnowledgeBaseAccessor()\n",
-    "        self.database = \n",
+    "        self.db = WikiDatabase()\n",
     "        pass\n",
     "    \n",
     "    def build(self, ds):\n",
@@ -63,8 +53,7 @@
     "        # Get entity from keyword\n",
     "        e = self.entity(ranked_phrases)\n",
     "        for relation in e['relations']:\n",
-    "            \n",
-    "        pass\n",
+    "            pass\n",
     "    \n",
     "    def get_ranked_phrases(self, x):\n",
     "        self.rake.extract_keywords_from_text(x)\n",
@@ -76,10 +65,7 @@
     "            entity = self.kba.get_entity(phrase)\n",
     "            if entity is not None:\n",
     "                return entity\n",
-    "        return entity    \n",
-    "        \n",
-    "            \n",
-    "            "
+    "        return entity         "
    ]
   },
   {
@@ -122,13 +108,6 @@
     "ranked_phrases = ds_builder.rake.get_ranked_phrases()\n",
     "ranked_phrases"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
