Database volume added

--- a/index.ipynb
+++ b/index.ipynb
@@ -1,36 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "source": [
-    "#hide\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#hide\n",
-    "from kirby.knowledge_base_accessor import *"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -43,77 +13,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Acronym\n",
-    "K - knowledge\n",
-    "\n",
-    "I - \n",
-    "\n",
-    "R \n",
-    "\n",
-    "B - base\n",
-    "\n",
-    "y - descriptive\n",
-    "\n",
-    "It's a KBy Transformer (pronounced Kirby)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## How to use"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Query the knowledge base."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Performing query a < c'"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "kba = KnowledgeBaseAccessor()\n",
-    "kba.query('a < c')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Setup\n",
     "\n",
     "Run `./bin/download_data` to download data in project directory"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Database Volume\n",
+    "\n",
+    "[SSHFS Volume](https://github.com/vieux/docker-volume-sshfs)\n",
+    "\n",
+    "`$ docker volume create -d vieux/sshfs -o sshcmd=<user@host:path> -o password=<password> sshvolume`\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kirby",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kirby"
+   "name": "python3"
   }
  },
  "nbformat": 4,
