Docker Compose Updated

--- a/index.ipynb
+++ b/index.ipynb
@@ -24,10 +24,17 @@
    "source": [
     "# Database Volume\n",
     "\n",
-    "[SSHFS Volume](https://github.com/vieux/docker-volume-sshfs)\n",
+    "[SSH File Drive](https://www.macissues.com/2014/10/13/how-to-mount-a-remote-system-as-a-drive-using-ssh-in-os-x/)\n",
     "\n",
-    "`$ docker volume create -d vieux/sshfs -o sshcmd=<user@host:path> -o password=<password> sshvolume`\n"
+    "`sshfs robert@mind.cs.byu.edu:/home/data /Users/robertmorain/mind.cs.byu.edu -ovolname=MIND`\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
