Preparing for PR

--- a/13_read_wiki_data.ipynb
+++ b/13_read_wiki_data.ipynb
@@ -6,10 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#default_exp read_wiki_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from qwikidata.json_dump import WikidataJsonDump\n",
     "import sqlite3\n",
     "import pandas\n",
-    "import CreateDatabase\n",
+    "import CreateDatabase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "property_dict = {\n",
     "    \"P6\": \"head of government\",\n",
     "    \"P7\": \"brother\",\n",
