Updated instructions for running kirby

--- a/index.ipynb
+++ b/index.ipynb
@@ -13,7 +13,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup\n",
+    "# Database\n",
+    "\n",
+    "I mount the database from mind.cs.byu to my local machine.\n",
+    "\n",
+    "[SSH File Drive](https://www.macissues.com/2014/10/13/how-to-mount-a-remote-system-as-a-drive-using-ssh-in-os-x/)\n",
+    "\n",
+    "`sshfs robert@mind.cs.byu.edu:/home/data /Users/robertmorain/mind.cs.byu.edu -ovolname=MIND`\n",
+    "\n",
+    "In order for your docker container to see these files, you need to modify the `docker-compose.yml` at `services > fastai > volumes` `/Users/robertmorain/mind.cs.byu.edu` to match your local mounted folder.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Docker\n",
+    "\n",
+    "Start the docker container by running\n",
+    "\n",
+    "`docker-compose up`\n",
+    "\n",
+    "in the kirby project folder.\n",
+    "\n",
+    "Go to http://127.0.0.1:8080/lab to open a jupyter lab instance to work in."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download data\n",
+    "\n",
+    "In order for the data download script to work you need to install `unzip`\n",
+    "\n",
+    "Open a terminal in Jupyter lab and run:\n",
+    "\n",
+    "`apt update && apt install unzip`\n",
     "\n",
     "Run `./bin/download_data` to download data in project directory"
    ]
@@ -22,11 +58,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Database Volume\n",
+    "## Run Tests\n",
     "\n",
-    "[SSH File Drive](https://www.macissues.com/2014/10/13/how-to-mount-a-remote-system-as-a-drive-using-ssh-in-os-x/)\n",
+    "To make sure everything is working, run tests in your Jupyter lab terminal\n",
     "\n",
-    "`sshfs robert@mind.cs.byu.edu:/home/data /Users/robertmorain/mind.cs.byu.edu -ovolname=MIND`\n"
+    "`nbdev_test_nbs`\n",
+    "\n",
+    "It's a good idea to run this before submitting any pull requests to the `main` branch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## nbdev\n",
+    "\n",
+    "If you are unfamiliar with nbdev, please refer to the [tutorial](https://nbdev.fast.ai/tutorial.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Git\n",
+    "\n",
+    "Before you make changes, create a branch.\n",
+    "\n",
+    "I make commits outside of the Jupyter lab terminal to avoid errors with configuring my email address.\n"
    ]
   },
   {
