--- a/index.ipynb
+++ b/index.ipynb
@@ -19,7 +19,13 @@
     "\n",
     "[SSH File Drive](https://www.macissues.com/2014/10/13/how-to-mount-a-remote-system-as-a-drive-using-ssh-in-os-x/)\n",
     "\n",
+    "For Mac:\n",
+    "\n",
     "`sshfs robert@mind.cs.byu.edu:/home/data /Users/robertmorain/mind.cs.byu.edu -ovolname=MIND`\n",
+    "\n",
+    "For Linux:\n",
+    "\n",
+    "`sshfs robert@mind.cs.byu.edu:/home/data /home/rob/mind.cs.byu.edu -o allow_other`\n",
     "\n",
     "In order for your docker container to see these files, you need to modify the `docker-compose.yml` at `services > fastai > volumes` `/Users/robertmorain/mind.cs.byu.edu` to match your local mounted folder.\n"
    ]
@@ -100,6 +106,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
