Finished dataset builder functions

--- a/08_database_proxy.ipynb
+++ b/08_database_proxy.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,9 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (<ipython-input-3-97e8dd9b8771>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-97e8dd9b8771>\"\u001b[1;36m, line \u001b[1;32m6\u001b[0m\n\u001b[1;33m    self.conn = sqlite3.connect('C:\\Users\\Kenneth\\Desktop\\Kenneth\\BYU2020Fall\\CS497\\Kirby\\kirby\\data\\db\\wiki_data.db')\u001b[0m\n\u001b[1;37m                                                                                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     ]
+    }
+   ],
    "source": [
     "#export\n",
     "class WikiDatabase:\n",
@@ -267,14 +276,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query tool : 0.006980180740356445\n",
+      "<sqlite3.Connection object at 0x000002880F5F1D50>\n",
+      "Query tool : 0.7602107524871826\n",
       "<class 'list'>\n",
       "[['Q5573861', 'Stephen Curry', 'Australian comedian and actor'], ['Q16167386', 'Stephen Curry', 'Wikimedia disambiguation page'], ['Q352159', 'Stephen Curry', 'American basketball player']]\n"
      ]
@@ -292,13 +302,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<sqlite3.Connection object at 0x000002880FADD030>\n",
       "[['Q11571', 'Cristiano Ronaldo', 'Portuguese association football player']]\n"
      ]
     }
